hopefully fixed squishing

--- a/Home/homestyle.css
+++ b/Home/homestyle.css
@@ -1,5 +1,5 @@
 html{
-    height: 3300px;
+    min-height: 3300px;
 }
 
 body{
@@ -19,6 +19,7 @@ html, body{
     top: 0;
     left: 0;
     width: 100vw;
+    min-width: 100vw;
     height: 100vh;
     z-index: 9999;
     pointer-events: none;
@@ -91,6 +92,7 @@ a{
     left: 3%;
     top: 45%;
     width: 500px;
+    min-width: 500px;
 
     color: white;
     text-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
@@ -116,6 +118,7 @@ a{
     overflow: hidden;
     white-space: nowrap;
     width: 0;
+    min-width: 0;
 
     color: white;
     text-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
@@ -125,6 +128,7 @@ a{
 
 #header:hover + .subtext-container .subtext{
     width: 100%;
+    min-width: 100%;
 }
 
 .highlightedsubtext{
@@ -143,6 +147,7 @@ a{
     right: 10%;
 
     width: 400px;
+    min-width: 400px;
     height: auto;
 
     overflow: hidden;
@@ -176,6 +181,7 @@ a{
 
 .aboutme p{
     width: 600px;
+    min-width: 600px;
     font-size: 22px;
 }
 
